--- a/QuantumMath/QuantumMath.csproj
+++ b/QuantumMath/QuantumMath.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3CE23FCE-B74B-485D-8AE7-8749AB69288B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>QSharp</RootNamespace>
-    <AssemblyName>QSharp</AssemblyName>
+    <ProjectGuid>{15B3C655-3C74-43DE-B1AE-D5F632D81235}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>QuantumMath</RootNamespace>
+    <AssemblyName>QuantumMath</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -46,26 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Application\Vector\QuantumVector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassicRandomBit\ClassicRandomBit.csproj">
-      <Project>{380ca317-fb6b-4fcd-b812-5cd1cd67293a}</Project>
-      <Name>ClassicRandomBit</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\QuantumMath\QuantumMath.csproj">
-      <Project>{15B3C655-3C74-43DE-B1AE-D5F632D81235}</Project>
-      <Name>QuantumMath</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\QuantumRandomBit\QuantumRandomBit.csproj">
-      <Project>{62c1af82-7668-4ac4-a98c-c8c96b54cf1c}</Project>
-      <Name>QuantumRandomBit</Name>
-    </ProjectReference>
+    <Folder Include="Application\Matrix\" />
+    <Folder Include="Application\Operation\" />
+    <Folder Include="Application\Operator\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
